# miruta

./: .gitignore  README.md  package.json  pnpm-lock.yaml
src/: app.scss  indexedDBmanager.ts  store.ts  types.ts
src-tauri/: Cargo.toml  migrations.sql  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: anime.rs  jikan.rs  main.rs  window_state.rs
src/bindings/: Anime.ts  AnimeColumns.ts  AnimeDetail.ts  AnimeList.ts  AnimeSearchResult.ts  Images.ts  Pagination.ts  WebP.ts  WindowState.ts
src/components/: ActionButton.svelte  AnimeDetail.svelte  AnimeItem.svelte  AnimeList.svelte  Footer.svelte  Header.svelte  Modal.svelte  Nav.svelte  Pagination.svelte  SearchForm.svelte  SearchResult.svelte  SearchResults.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/watched/: +page.svelte
src/routes/watchlist/: +page.svelte
