[package]
name = "miruta"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "window-set-size",
    "window-set-position",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1.3"
reqwest = { version = "0.12.5", features = ["json"] }
ts-rs = "9.0.1"
sqlx = { version = "0.8.0", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.39.1", features = ["rt", "macros"] }
anyhow = "1.0.86"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
